[gd_scene load_steps=3 format=3 uid="uid://cms3qllgumd5t"]

[ext_resource type="Script" uid="uid://b1aqp66n0s3nh" path="res://Scenes/MultiplayerMenu/multiplayer_menu.gd" id="1_f0i72"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_npnbc"]
color = Color(0, 0, 0, 0)

[node name="MultiplayerMenu" type="CanvasLayer"]
script = ExtResource("1_f0i72")

[node name="LobbyLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 40.0
offset_top = 34.0
offset_right = 667.0
offset_bottom = 108.0
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Lobby Key: "

[node name="Menu" type="Control" parent="."]
unique_name_in_owner = true
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.09320182, 0.09320182, 0.09320182, 0.85)

[node name="MainContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -257.0
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="Menu/MainContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_font_sizes/font_size = 70
text = "Multiplayer Lobby"

[node name="MainMenu" type="VBoxContainer" parent="Menu/MainContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1

[node name="HSeparator1" type="HSeparator" parent="Menu/MainContainer/MainMenu"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxLine_npnbc")

[node name="Option1" type="HBoxContainer" parent="Menu/MainContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="Menu/MainContainer/MainMenu/Option1"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
text = "Nickname : "

[node name="NicknameInput" type="LineEdit" parent="Menu/MainContainer/MainMenu/Option1"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
placeholder_text = "Player name"
max_length = 20
expand_to_text_length = true

[node name="Option3" type="HBoxContainer" parent="Menu/MainContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="Menu/MainContainer/MainMenu/Option3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
text = "Lobby Key : "

[node name="ServerAddressInput" type="LineEdit" parent="Menu/MainContainer/MainMenu/Option3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
placeholder_text = "127.0.0.1"
alignment = 1
expand_to_text_length = true

[node name="Option4" type="HBoxContainer" parent="Menu/MainContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="Menu/MainContainer/MainMenu/Option4"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
text = "Color: "

[node name="ColorPickerButton" type="ColorPickerButton" parent="Menu/MainContainer/MainMenu/Option4"]
unique_name_in_owner = true
layout_mode = 2
text = "aaaaaaa"
edit_alpha = false
edit_intensity = false

[node name="HSeparator2" type="HSeparator" parent="Menu/MainContainer/MainMenu"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxLine_npnbc")

[node name="Option5" type="HBoxContainer" parent="Menu/MainContainer/MainMenu"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="HostButton" type="Button" parent="Menu/MainContainer/MainMenu/Option5"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_pressed_color = Color(0, 0.52549, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.52549, 0, 1)
theme_override_font_sizes/font_size = 35
text = "HOST"
flat = true

[node name="JoinButton" type="Button" parent="Menu/MainContainer/MainMenu/Option5"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_pressed_color = Color(0, 0.52549, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.525257, 0, 1)
theme_override_font_sizes/font_size = 35
text = "JOIN"
flat = true

[node name="Option6" type="HBoxContainer" parent="Menu/MainContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="DisconnectButton" type="Button" parent="Menu/MainContainer/MainMenu/Option6"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_pressed_color = Color(0.858824, 0, 0, 0.862745)
theme_override_colors/font_hover_color = Color(0.858807, 4.71681e-06, 1.15514e-06, 0.862745)
theme_override_font_sizes/font_size = 35
text = "DISCONNECT
"
flat = true

[node name="Option7" type="HBoxContainer" parent="Menu/MainContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="QuitButton" type="Button" parent="Menu/MainContainer/MainMenu/Option7"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_pressed_color = Color(0.858824, 0, 0, 0.862745)
theme_override_colors/font_hover_color = Color(0.858807, 4.71681e-06, 1.15514e-06, 0.862745)
theme_override_font_sizes/font_size = 35
text = "QUIT"
flat = true
